--- a/_posts/2018-03-22-系统分析与设计-02.md
+++ b/_posts/2018-03-22-系统分析与设计-02.md
@@ -34,4 +34,4 @@
 
 ## **2 简答题**
 
-![](D:\Workspace\MyBlog\SYSUZZY.github.io\resources\picture\tower_screencut.PNG)
+![image](https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/tower_screencut.PNG)
