--- a/_posts/2018-04-19-系统分析与设计-03.md
+++ b/_posts/2018-04-19-系统分析与设计-03.md
@@ -4,7 +4,7 @@
 
 **阅读 Asg_RH 文档，绘制用例图。 按 Task1 要求，请使用工具 UMLet，截图格式务必是 png 并控制尺寸。**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/Asg_RH.png">
+<img src="../resources/picture/Homework3/Asg_RH.png">
 
 ------
 
@@ -17,37 +17,37 @@
 
 **酒店搜索**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-1.png">
+<img src="../resources/picture/Homework3/1-1.png">
 
 **搜索结果**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-2.png">
+<img src="../resources/picture/Homework3/1-2.png">
 
 **搜索失败**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-3.png">
+<img src="../resources/picture/Homework3/1-3.png">
 
 **选定酒店**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-4.png">
+<img src="../resources/picture/Homework3/1-4.png">
 
 **选定酒店**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-5.png">
+<img src="../resources/picture/Homework3/1-5.png">
 
 **订票登陆**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-6.png">
+<img src="../resources/picture/Homework3/1-6.png">
 
 **确认订单信息**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-7.png">
+<img src="../resources/picture/Homework3/1-7.png">
 
 ****
 
 **入住信息**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/1-8.png" width="500">
+<img src="../resources/picture/Homework3/1-8.png" width="500">
 
 **付款**
 
@@ -55,7 +55,7 @@ Alipay
 
 **用例模型**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/flypig.png">
+<img src="../resources/picture/Homework3/flypig.png">
 
 ------
 
@@ -81,7 +81,7 @@ Alipay
 
 **在（任务b）基础上，用活动图建模找酒店用例。简述利用流程图发现子用例的方法。**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/flypig_model.png" width="400">
+<img src="../resources/picture/Homework3/flypig_model.png" width="400">
 
 沿着流程图的起始状态开始，在每次遇到流程图的分支时都记录下来，例如遇到搜索时会有搜索成功和搜索失败两条路径。记录下当前选择的路径，直到走到终止状态，就是一个子用例。然后返回到刚刚记录的节点，选择另外一条路径，又能够生成一个子用例。如此操作直到没有记录的节点，则寻找到所有的子用例了。
 
@@ -89,13 +89,13 @@ Alipay
 
 **选择你身边的银行 ATM，用活动图描绘取款业务流程**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/ATM.png" width="400">
+<img src="../resources/picture/Homework3/ATM.png" width="400">
 
 ------
 
 **查找淘宝退货业务官方文档，使用多泳道图，表达客户、淘宝网、淘宝商家服务系统、商家等用户和系统协同完成退货业务的过程。分析客户要完成退货业务，在淘宝网上需要实现哪些系统用例**
 
-<img src="https://github.com/SYSUZZY/SYSUZZY.github.io/blob/master/resources/picture/Homework3/taobaotuihuo.png" >
+<img src="../resources/picture/Homework3/taobaotuihuo.png" >
 
 生成退款单、变更退款单状态、同意/不同意退款处理。
 
