--- a/_posts/2018-04-24-系统分析与设计-04.md
+++ b/_posts/2018-04-24-系统分析与设计-04.md
@@ -3,8 +3,10 @@ a. 阅读 Asg_RH 文档，按用例构建领域模型。
 - 说明：请不要受 PCMEF 层次结构影响。你需要识别实体（E）和 中介实体（M，也称状态实体）
   - 在单页面应用（如 vue）中，E 一般与数据库构建有关， M 一般与 [store 模式](https://cn.vuejs.org/v2/guide/state-management.html) 有关
   - 在 java web 应用中，E 一般与数据库构建有关， M 一般与 session 有关
-  - 
-<img src="../resources/picture/homework4/Asg_RH领域建模.png">
+  - <img src="../resources/picture/homework4/room.png">
+  - <img src="../resources/picture/homework4/hotel.png">
+  - <img src="../resources/picture/homework4/room2.png">
+  - <img src="../resources/picture/homework4/pay.png">
 
 - b. 数据库建模(E-R 模型)
   - 按 Task 3 要求，给出系统的 E-R 模型（数据逻辑模型）
