--- a/_posts/2018-07-01-期末报告.md
+++ b/_posts/2018-07-01-期末报告.md
@@ -54,3 +54,5 @@
 - 测试了与后端API的衔接
 
 ## 博客清单
+
+[微信小程序自定义组件](https://sysuzzy.github.io/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F-%E8%87%AA%E5%AE%9A%E4%B9%89%E7%BB%84%E4%BB%B6/)
